--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "node_modules/karma/bin/karma start",
     "test-once": "node_modules/karma/bin/karma start --single-run"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
+  },
   "devDependencies": {
     "babelify": "^6.3.0",
     "function-bind": "^1.0.2",
     "grunt": "0.4.x",
-    "grunt-babel": "^5.0.2",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-cssmin": "0.10.0",
