--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "Filterbale list",
   "version": "0.0.1",
   "private": true,
+  "main": "server.js",
   "scripts": {
+    "start": "npm run build:prod",
     "test": "node_modules/karma/bin/karma start",
     "test-once": "node_modules/karma/bin/karma start --single-run",
     "lint": "jsxhint js",
@@ -27,6 +29,7 @@
     "babelify": "^6.3.0",
     "browserify": "^12.0.0",
     "cssmin": "^0.4.3",
+    "express": "^4.13.3",
     "function-bind": "^1.0.2",
     "grunt": "0.4.x",
     "grunt-browserify": "^4.0.1",
